--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>☕️ Rate This Coffee</title>
+    <title>☕️ Coffee</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -11,7 +11,7 @@
 
     <div class="mt-4">
       <a href="" class="pl-4 pr-5">plan</a>
-      <a href="">playground</a>
+      <a href="">here</a>
     </div>
 
 
