--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                   <p class="text-center text-yellow-900 ">£</p>
                 </div>
                 <div class="pr-6">
-                  <p class="text-4xl rating__star text-opacity-50 hover:bg-yellow-200 p-1 rounded-full  h-14 w-14 hover:text-opacity-100 cursor-pointer text-black flex justify-center items-center">🤑</p>
+                  <p class="text-4xl rating__star text-opacity-50 hover:bg-yellow-400 p-1 rounded-full  h-14 w-14 hover:text-opacity-100 cursor-pointer text-black flex justify-center items-center">🤑</p>
                   <p class="text-center text-yellow-900">££</p>
                 </div>
                 <div class="pr-6">
-                  <p class="text-4xl rating__star text-opacity-50 hover:bg-yellow-200 p-1 rounded-full  h-14 w-14 hover:text-opacity-100 cursor-pointer text-black flex justify-center items-center">🤑</p>
+                  <p class="text-4xl rating__star text-opacity-50 hover:bg-red-200 p-1 rounded-full  h-14 w-14 hover:text-opacity-100 cursor-pointer text-black flex justify-center items-center">🤑</p>
                   <p class="text-center text-yellow-900">£££</p>
                 </div>
                 <div class="pr-6">
-                  <p class="text-4xl rating__star text-opacity-50 hover:bg-yellow-200 p-1 rounded-full  h-14 w-14 hover:text-opacity-100 cursor-pointer text-black flex justify-center items-center">🤑</p>
+                  <p class="text-4xl rating__star text-opacity-50 hover:bg-red-400 p-1 rounded-full  h-14 w-14 hover:text-opacity-100 cursor-pointer text-black flex justify-center items-center">🤑</p>
                   <p class="text-center text-yellow-900">££££</p>
                 </div>
             </div>
